force-app/main/default/objects/UserTerritoryAssociation_History__c/UserTerritoryAssociation_History__c.object-meta.xml
<CustomObject>
    <label>UserTerritoryAssociation History</label>
    <nameField>
        <displayFormat>UTAH-{000000}</displayFormat>
        <label>UserTerritoryAssociation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserTerritoryAssociation History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>