force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Adaptive_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Adaptive_Territory_Id__c</fullName>
    <label>Adaptive Territory Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>