force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <formula>User__r.EmployeeNumber</formula>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>