force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <label>Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>