force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Territory_Model__c.field-meta.xml
<CustomField>
    <fullName>Territory_Model__c</fullName>
    <label>Territory Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>