force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Territory_Model_State__c.field-meta.xml
<CustomField>
    <fullName>Territory_Model_State__c</fullName>
    <label>Territory Model State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>