force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/Territory_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Type__c</fullName>
    <label>Territory Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>