force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/User_Territory_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Territory_Role__c</fullName>
    <label>User Territory Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>