force-app/main/default/objects/UserTerritoryAssociation_History__c/fields/UserTerritoryAssociation_Id__c.field-meta.xml
<CustomField>
    <fullName>UserTerritoryAssociation_Id__c</fullName>
    <label>UserTerritoryAssociation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>