force-app/main/default/objects/UserTerritoryAssociation_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Adaptive_Territory_Id__c</columns>
    <columns>User_Territory_Role__c</columns>
    <columns>Territory_Type__c</columns>
    <columns>Territory_Model__c</columns>
    <columns>Territory_Model_State__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>